<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".ui.activity.ResumenPedidoActivity">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/Widget.MaterialComponents.AppBarLayout.Surface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Surface"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/surface_rounded_bottom"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/resumen_pedido_title"
            app:titleMarginStart="20dp" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/screen_horizontal_spacing"
                android:paddingVertical="12dp">

                <TextView
                    android:id="@+id/resumen_pedido_para_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="2dp"
                    android:text="@string/resumen_pedido_para"
                    android:textStyle="bold" />

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/cliente_imagen"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_below="@id/resumen_pedido_para_tv"
                    android:layout_marginEnd="@dimen/screen_horizontal_spacing"
                    android:src="@drawable/default_profile_icon_24" />

                <TextView
                    android:id="@+id/cliente_nombre_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/resumen_pedido_para_tv"
                    android:layout_marginTop="4dp"
                    android:layout_toEndOf="@id/cliente_imagen"
                    android:lines="1"
                    android:text="@string/perfil_nombre"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

                <TextView
                    android:id="@+id/cliente_correo_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cliente_nombre_tv"
                    android:layout_toEndOf="@id/cliente_imagen"
                    android:lines="1"
                    android:text="@string/perfil_correo"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </RelativeLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/screen_horizontal_spacing"
                    android:paddingTop="12dp">

                    <ImageView
                        android:id="@+id/ubicacion_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="@dimen/screen_horizontal_spacing"
                        android:src="@drawable/ic_baseline_location_on_24"
                        app:tint="?attr/colorPrimary" />

                    <TextView
                        android:id="@+id/direccion_title_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/ubicacion_icon"
                        android:text="@string/resumen_pedido_direccion_title"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/resumen_pedido_cambiar_btn"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:textColor="?attr/colorPrimary" />

                    <TextView
                        android:id="@+id/direccion_nombre_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ubicacion_icon"
                        android:layout_alignStart="@id/direccion_title_tv"
                        android:lines="1"
                        android:text="@string/resumen_pedido_direccion_nombre"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

                    <TextView
                        android:id="@+id/direccion_detalle_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/direccion_nombre_tv"
                        android:layout_alignStart="@id/direccion_nombre_tv"
                        android:layout_marginBottom="12dp"
                        android:lines="2"
                        android:text="@string/resumen_pedido_direccion_detalles" />

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_below="@id/direccion_detalle_tv"
                        android:layout_alignStart="@id/direccion_title_tv" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/screen_horizontal_spacing"
                    android:paddingTop="12dp">

                    <ImageView
                        android:id="@+id/payment_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="@dimen/screen_horizontal_spacing"
                        android:src="@drawable/ic_baseline_payment_24"
                        app:tint="?attr/colorPrimary" />

                    <TextView
                        android:id="@+id/payment_method_title_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/payment_icon"
                        android:text="@string/resumen_pedido_payment_method_title"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/resumen_pedido_cambiar_btn"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:textColor="?attr/colorPrimary" />

                    <TextView
                        android:id="@+id/payment_nombre_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/payment_icon"
                        android:layout_alignStart="@id/payment_method_title_tv"
                        android:layout_marginBottom="12dp"
                        android:lines="1"
                        android:text="@string/resumen_pedido_payment_method_name"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />
                </RelativeLayout>
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="2dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/screen_horizontal_spacing"
                android:paddingVertical="12dp">

                <TextView
                    android:id="@+id/productos_total_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="8dp"
                    android:text="@string/productos_total_title"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                <TextView
                    android:id="@+id/productos_total_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="8dp"
                    android:text="@string/item_producto_precio"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                <TextView
                    android:id="@+id/delivery_total_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/productos_total_title_tv"
                    android:layout_alignParentStart="true"
                    android:text="@string/delivery_total_title"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                <TextView
                    android:id="@+id/delivery_total_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/productos_total_title_tv"
                    android:layout_alignParentEnd="true"
                    android:text="@string/delivery_total"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
            </RelativeLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="@dimen/screen_horizontal_spacing"
                android:layout_marginBottom="4dp" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/payment_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:cardCornerRadius="0dp"
            app:cardElevation="24dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="@dimen/screen_horizontal_spacing"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resumen_pedido_costo_total"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                    <TextView
                        android:id="@+id/importe_total_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_producto_precio"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        android:textStyle="bold" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/realizar_pedido_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginHorizontal="@dimen/screen_horizontal_spacing"
                    android:layout_marginVertical="@dimen/screen_vertical_spacing"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/realizar_pedido_btn"
                    app:cornerRadius="4dp"
                    app:icon="@drawable/ic_baseline_check_circle_outline_24" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>