<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical"
    tools:context=".ui.fragment.PerfilFragment">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/Widget.MaterialComponents.AppBarLayout.Surface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Surface"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/surface_rounded_bottom"
            app:menu="@menu/perfil_app_bar_menu"
            app:title="@string/perfil_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/screen_horizontal_spacing"
            android:layout_marginVertical="@dimen/screen_vertical_spacing">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingTop="24dp"
                android:paddingBottom="16dp">

                <ImageView
                    android:id="@+id/perfil_imagen"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_profile_icon_24" />

                <TextView
                    android:id="@+id/perfil_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:maxLines="1"
                    android:text="@string/perfil_nombre"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="?attr/colorOnSurface" />

                <TextView
                    android:id="@+id/perfil_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:maxLines="1"
                    android:text="@string/perfil_correo"
                    android:textAlignment="center" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/screen_horizontal_spacing"
                android:layout_marginBottom="8dp"
                android:letterSpacing="0.05"
                android:text="@string/perfil_general_section"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="@dimen/screen_horizontal_spacing"
                android:layout_marginBottom="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:background="@drawable/section_icon_background"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_baseline_settings_24"
                        app:tint="?attr/colorPrimary" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:letterSpacing="0.025"
                            android:text="@string/modificar_perfil_title"
                            android:textColor="@color/orange_700"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/modificar_perfil_body"
                            android:textAppearance="?attr/textAppearanceCaption" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="8dp"
                        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                        app:tint="?android:attr/textColorHint" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/logout_btn"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="@dimen/screen_horizontal_spacing"
                android:layout_marginBottom="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:background="@drawable/section_icon_background"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_baseline_logout_24"
                        app:tint="?attr/colorPrimary" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:letterSpacing="0.025"
                            android:text="@string/logout_perfil_title"
                            android:textColor="@color/orange_700"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/logout_perfil_body"
                            android:textAppearance="?attr/textAppearanceCaption" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="8dp"
                        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                        app:tint="?android:attr/textColorHint" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>